--- a/pom.xml
+++ b/pom.xml
@@ -19,16 +19,10 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
-			<scope>provided</scope>  
+			<scope>provided</scope>
 		</dependency>
-		<!-- 
-		<dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
-            <scope>provided</scope>
-        </dependency>
-         -->
+		<!-- <dependency> <groupId>javax</groupId> <artifactId>javaee-api</artifactId> 
+			<version>7.0</version> <scope>provided</scope> </dependency> -->
 		<!-- spring依赖 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -126,7 +120,7 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-
+				
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -135,8 +129,6 @@
 					<warName>yyfsshj</warName>
 				</configuration>
 			</plugin>
-
-
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
@@ -146,26 +138,12 @@
 					<port>8080</port>
 				</configuration>
 			</plugin>
-			
-			<!-- 
-			<plugin>
 
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.10</version>
-				<configuration>
-					<scanIntervalSeconds>2</scanIntervalSeconds>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			 -->
+
+			<!-- <plugin> <groupId>org.mortbay.jetty</groupId> <artifactId>maven-jetty-plugin</artifactId> 
+				<version>6.1.10</version> <configuration> <scanIntervalSeconds>2</scanIntervalSeconds> 
+				</configuration> <executions> <execution> <phase>package</phase> <goals> 
+				<goal>run</goal> </goals> </execution> </executions> </plugin> -->
 		</plugins>
 	</build>
 </project>
