--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
 				</configuration>
 			</plugin>
 			
+			<!-- tomcat -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
