--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
 				</configuration>
 			</plugin>
 			
-			<!-- tomcat -->
+			<!-- tomcat 
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
@@ -140,7 +140,7 @@
 					<port>8080</port>
 				</configuration>
 			</plugin>
-
+-->
 
 			<!-- <plugin> <groupId>org.mortbay.jetty</groupId> <artifactId>maven-jetty-plugin</artifactId> 
 				<version>6.1.10</version> <configuration> <scanIntervalSeconds>2</scanIntervalSeconds> 
