--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- spring依赖 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -131,7 +131,8 @@
 					<warName>yyfsshj</warName>
 				</configuration>
 			</plugin>
-
+			
+			<!-- -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
@@ -141,12 +142,26 @@
 					<port>8080</port>
 				</configuration>
 			</plugin>
+ 			
 
-
-			<!-- <plugin> <groupId>org.mortbay.jetty</groupId> <artifactId>maven-jetty-plugin</artifactId> 
-				<version>6.1.10</version> <configuration> <scanIntervalSeconds>2</scanIntervalSeconds> 
-				</configuration> <executions> <execution> <phase>package</phase> <goals> 
-				<goal>run</goal> </goals> </execution> </executions> </plugin> -->
+			<!--
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.10</version>
+				<configuration>
+					<scanIntervalSeconds>2</scanIntervalSeconds>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			 -->
 		</plugins>
 	</build>
 </project>
